finish cart page

--- a/project/obout.html
+++ b/project/obout.html
@@ -149,156 +149,157 @@
                     </label>
 
                     <div class="wrapper-cart-body">
-                        <div class="wrapper-cart-titles">
-                            <h3 class="wrapper-cart-titles__title-product title">
-                                PRODUCT
-                            </h3>
+                        <div class="wrapper-cart-overlay">
+                            <div class="wrapper-cart-titles">
+                                <h3 class="wrapper-cart-titles__title-product title">
+                                    PRODUCT
+                                </h3>
 
-                            <h3 class="wrapper-cart-titles__title-quantity title">
-                                QUANTITY
-                            </h3>
+                                <h3 class="wrapper-cart-titles__title-quantity title">
+                                    QUANTITY
+                                </h3>
 
-                            <h3 class="wrapper-cart-titles__title-subtotal title">
-                                SUBTOTAL
-                            </h3>
-                        </div>
+                                <h3 class="wrapper-cart-titles__title-subtotal title">
+                                    SUBTOTAL
+                                </h3>
+                            </div>
 
-                        <ul class="wrapper-cart-body__list">
-                            <li class="wrapper-cart-body__item">
-                                <div class="wrapper-product-short-description">
-                                    <picture>
+                            <ul class="wrapper-cart-body__list">
+                                <li class="wrapper-cart-body__item">
+                                    <div class="wrapper-product-short-description">
+                                        <picture>
 
 
-                                        <img class="wrapper-product-short-description__image"
-                                            src="./images/product/IPHONE-1.jpg" alt="IPHONE 13">
-                                    </picture>
+                                            <img class="wrapper-product-short-description__image"
+                                                src="./images/product/IPHONE-1.jpg" alt="IPHONE 13">
+                                        </picture>
 
-                                    <div class="wrapper-select-product-title ">
-                                        <h3 class="title">
-                                            IPHONE 13
-                                        </h3>
+                                        <div class="wrapper-select-product-title ">
+                                            <h3 class="title">
+                                                IPHONE 13
+                                            </h3>
 
-                                        <p class="description-product-price-without-discount price">
+                                            <p class="description-product-price-without-discount price">
+                                                $1500.00
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="wrapper-counter">
+                                        <button class="button button--border-sm button--padding-sm-tp-1">
+                                            -
+                                        </button>
+
+                                        <div class="wrapper-count">
+                                            1
+                                        </div>
+
+                                        <button class="button button--border-sm button--padding-sm-tp-1">
+                                            +
+                                        </button>
+                                    </div>
+
+                                    <div class="wrapper-subtotal-product-price">
+                                        <p class="description-product-price-without-discount price ">
                                             $1500.00
                                         </p>
                                     </div>
-                                </div>
 
-                                <div class="wrapper-counter">
-                                    <button class="button button--border-sm button--padding-sm-tp-1">
-                                        -
-                                    </button>
+                                    <div class="wrapper-delete-position">
+                                        <button class="button">
+                                            <i class="badge badge--large  fa-solid fa-x"></i>
+                                        </button>
+                                    </div>
+                                </li>
 
-                                    <div class="wrapper-count">
-                                        1
+                                <li class="wrapper-cart-body__item">
+                                    <div class="wrapper-product-short-description">
+                                        <picture>
+
+
+                                            <img class="wrapper-product-short-description__image"
+                                                src="./images/product/apple-watch.jpg" alt="Apple watch pink">
+                                        </picture>
+
+                                        <div class="wrapper-select-product-title ">
+                                            <h3 class="title">
+                                                PINK WATCH
+                                            </h3>
+
+                                            <p class="description-product-price-without-discount price">
+                                                $870.00
+                                            </p>
+                                        </div>
                                     </div>
 
-                                    <button class="button button--border-sm button--padding-sm-tp-1">
-                                        +
-                                    </button>
-                                </div>
+                                    <div class="wrapper-counter">
+                                        <button class="button button--border-sm button--padding-sm-tp-1">
+                                            -
+                                        </button>
 
-                                <div class="wrapper-subtotal-product-price">
-                                    <p class="description-product-price-without-discount price ">
-                                        $1500.00
-                                    </p>
-                                </div>
+                                        <div class="wrapper-count">
+                                            1
+                                        </div>
 
-                                <div class="wrapper-delete-position">
-                                    <button class="button">
-                                        <i class="badge badge--large  fa-solid fa-x"></i>
-                                    </button>
-                                </div>
-                            </li>
+                                        <button class="button button--border-sm button--padding-sm-tp-1">
+                                            +
+                                        </button>
+                                    </div>
 
-                            <li class="wrapper-cart-body__item">
-                                <div class="wrapper-product-short-description">
-                                    <picture>
-
-
-                                        <img class="wrapper-product-short-description__image"
-                                            src="./images/product/apple-watch.jpg" alt="Apple watch pink">
-                                    </picture>
-
-                                    <div class="wrapper-select-product-title ">
-                                        <h3 class="title">
-                                            PINK WATCH
-                                        </h3>
-
-                                        <p class="description-product-price-without-discount price">
+                                    <div class="wrapper-subtotal-product-price">
+                                        <p class="description-product-price-without-discount price ">
                                             $870.00
                                         </p>
                                     </div>
-                                </div>
 
-                                <div class="wrapper-counter">
-                                    <button class="button button--border-sm button--padding-sm-tp-1">
-                                        -
-                                    </button>
-
-                                    <div class="wrapper-count">
-                                        1
+                                    <div class="wrapper-delete-position">
+                                        <button class="button">
+                                            <i class="badge badge--large  fa-solid fa-x"></i>
+                                        </button>
                                     </div>
+                                </li>
+                            </ul>
 
-                                    <button class="button button--border-sm button--padding-sm-tp-1">
-                                        +
-                                    </button>
-                                </div>
+                            <h2 class="title title--jost-30">
+                                CART TOTALS
+                            </h2>
 
-                                <div class="wrapper-subtotal-product-price">
-                                    <p class="description-product-price-without-discount price ">
-                                        $870.00
-                                    </p>
-                                </div>
+                            <div class="wrapper-sub-total-price">
+                                <h3 class="wrapper-sub-total-price__title title title--select">
+                                    SUBTOTAL
+                                </h3>
 
-                                <div class="wrapper-delete-position">
-                                    <button class="button">
-                                        <i class="badge badge--large  fa-solid fa-x"></i>
-                                    </button>
-                                </div>
-                            </li>
-                        </ul>
+                                <p class="description-product-price-without-discount price">
+                                    $2370.00
+                                </p>
+                            </div>
 
-                        <h2 class="title title--jost-30">
-                            CART TOTALS
-                        </h2>
+                            <div class="wrapper-total-price">
+                                <h3 class="wrapper-total-price_title title title--select">
+                                    TOTAL
+                                </h3>
 
-                        <div class="wrapper-sub-total-price">
-                            <h3 class="wrapper-sub-total-price__title title title--select">
-                                SUBTOTAL
-                            </h3>
+                                <p class="description-product-price-without-discount price ">
+                                    $2370.00
+                                </p>
+                            </div>
 
-                            <p class="description-product-price-without-discount price">
-                                $2370.00
-                            </p>
+                            <div class="wrapper-cart-buttons">
+                                <button class="button button--secondary-color button--padding-lrg">
+                                    UPDATE CART
+                                </button>
+
+                                <a class="button button--secondary-color button--padding-lrg" href="./shop.html">
+                                    CONTINUE SHOPPING
+                                </a>
+
+
+                                <a class="button button--secondary-color button--padding-lrg" href="./checkout.html">
+                                    PROCEED TO CHECKOUT
+                                </a>
+
+                            </div>
                         </div>
-
-                        <div class="wrapper-total-price">
-                            <h3 class="wrapper-total-price_title title title--select">
-                                TOTAL
-                            </h3>
-
-                            <p class="description-product-price-without-discount price ">
-                                $2370.00
-                            </p>
-                        </div>
-
-                        <div class="wrapper-cart-buttons">
-                            <button class="button button--secondary-color button--padding-lrg">
-                                UPDATE CART
-                            </button>
-
-                            <a class="button button--secondary-color button--padding-lrg" href="./shop.html">
-                                CONTINUE SHOPPING
-                            </a>
-
-
-                            <a class="button button--secondary-color button--padding-lrg" href="./checkout.html">
-                                PROCEED TO CHECKOUT
-                            </a>
-
-                        </div>
-
                     </div>
                 </li>
             </ul>
@@ -392,7 +393,8 @@
         </section>
 
         <section class="section-store-foundation">
-            <video class="section-store-foundation__video" poster="./images/video-preview/igor-miske-CwVE4xCAA8Y-unsplash.png" controls>
+            <video class="section-store-foundation__video"
+                poster="./images/video-preview/igor-miske-CwVE4xCAA8Y-unsplash.png" controls>
                 <source src="video.mp4" type="video/mp4">
             </video>
 
@@ -411,8 +413,9 @@
                     curabitur diam senectus congue velit et.
                 </p>
 
-                <a class="section-store-foundation__button button button--padding-bigger button--secondary-color" href="./shop.html">
-                    SHOP OUR STORE 
+                <a class="section-store-foundation__button button button--padding-bigger button--secondary-color"
+                    href="./shop.html">
+                    SHOP OUR STORE
                 </a>
             </div>
         </section>
@@ -483,7 +486,7 @@
                     <input class="input input--padding-secondary input--shorter" type="email"
                         placeholder="Your email address here">
 
-                    <button class="button button--third-color button--padding-bigger" type="submit">
+                    <button class="button button--third-color button--padding-bigger-tp-1" type="submit">
                         SUBSCRIBE
                     </button>
                 </form>
