finish checkout page

--- a/project/checkout.html
+++ b/project/checkout.html
@@ -433,7 +433,7 @@
             </div>
 
             <div class="wrapper-checkout-cart-total">
-                <h2 class="title title--jost-30">
+                <h2 class="wrapper-checkout-cart-total__title title title--jost-30">
                     CART TOTALS
                 </h2>
 
@@ -458,7 +458,7 @@
                 </div>
             </div>
 
-            <form id="payment" action="https://backend.com/" method="get">
+            <form class="form-payment-options" id="payment" action="https://backend.com/" method="get">
                 <label class="form-label-radio">
                     <input type="radio" name="payment-method">
                     
