create link for item-description page

--- a/project/shop.html
+++ b/project/shop.html
@@ -396,8 +396,8 @@
 
                     <li class="main-selling-part__item">
                         <div class="wrapper-selling-item-image">
-                            <img class="wrapper-selling-item-image__image" src="./images/selling-items/4.jpg"
-                                alt="Pink apple watch">
+                            <a href="./item-description.html"><img class="wrapper-selling-item-image__image" src="./images/selling-items/4.jpg"
+                                alt="Pink apple watch"></a>
 
                             <button
                                 class="wrapper-selling-item-image__button button button--padding-sm-tp-2 button--secondary-color">
