--- a/project/cart.html
+++ b/project/cart.html
@@ -318,7 +318,7 @@
                 <a class="link link--without-padding" href="./index.html">Home</a> >
 
                 <a class="link link--selected link--underline-border link--underline-border-secondary-color link--without-padding"
-                    href="./obout.html">
+                    href="./about.html">
                     Cart
                 </a>
             </p>
@@ -648,7 +648,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./obout.html">
+                        <a class="link  link--without-padding link--selected" href="./about.html">
                             ABOUT
                         </a>
                     </li>
