--- a/project/item-description.html
+++ b/project/item-description.html
@@ -1054,7 +1054,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./obout.html">
+                        <a class="link  link--without-padding" href="./about.html">
                             ABOUT
                         </a>
                     </li>
