--- a/project/shop.html
+++ b/project/shop.html
@@ -846,7 +846,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./obout.html">
+                        <a class="link  link--without-padding link--selected" href="./about.html">
                             ABOUT
                         </a>
                     </li>
