finish contact page, favicon.correct links

--- a/project/index.html
+++ b/project/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -18,7 +25,7 @@
         <nav class="header-navigation">
             <ul class="header-navigation__list-links-main list list--horizontal">
                 <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link link--selected" href="./index.html">
+                    <a class="item-links-main__link link link--selected link--not-active" href="./index.html">
                         HOME
                     </a>
                 </li>
@@ -54,12 +61,6 @@
                         </li>
 
                         <li class="list-links-extra__item-links-extra ">
-                            <a class="item-links-extra__link link" href="./blogs.html">
-                                BLOGS
-                            </a>
-                        </li>
-
-                        <li class="list-links-extra__item-links-extra ">
                             <a class="item-links-extra__link link" href="./contact.html">
                                 CONTACT
                             </a>
@@ -73,11 +74,7 @@
                     </a>
                 </li>
 
-                <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link" href="./blogs.html">
-                        BLOGS
-                    </a>
-                </li>
+                 
 
                 <li class="list-links-main__item-links-main">
                     <a class="item-links-main__link link" href="./contact.html">
@@ -1092,7 +1089,7 @@
 
                 <ul class="section-footer-main-content__list">
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./index.html">
+                        <a class="link  link--without-padding link--selected link--not-active" href="./index.html">
                             HOME
                         </a>
                     </li>
@@ -1106,12 +1103,6 @@
                     <li class="section-footer-main-content__item">
                         <a class="link  link--without-padding" href="./shop.html">
                             SHOP
-                        </a>
-                    </li>
-
-                    <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./blogs.html">
-                            BLOGS
                         </a>
                     </li>
 
@@ -1148,7 +1139,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link link--without-padding" href="">
+                         <a class="link link--without-padding" href="./contact.html">
                             CONTACT US
                         </a>
                     </li>
