--- a/project/shop.html
+++ b/project/shop.html
@@ -36,7 +36,7 @@
 
                     <ul class="item-links-main__list-links-extra">
                         <li class="list-links-extra__item-links-extra">
-                            <a class="item-links-extra__link link link--selected" href="./shop.html">
+                            <a class="item-links-extra__link link link--selected link--not-active" href="./shop.html">
                                 SHOP
                             </a>
                         </li>
@@ -54,12 +54,6 @@
                         </li>
 
                         <li class="list-links-extra__item-links-extra ">
-                            <a class="item-links-extra__link link" href="./blogs.html">
-                                BLOGS
-                            </a>
-                        </li>
-
-                        <li class="list-links-extra__item-links-extra ">
                             <a class="item-links-extra__link link" href="./contact.html">
                                 CONTACT
                             </a>
@@ -68,16 +62,12 @@
                 </li>
 
                 <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link link--selected" href="./about.html">
+                    <a class="item-links-main__link link " href="./about.html">
                         ABOUT
                     </a>
                 </li>
 
-                <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link" href="./blogs.html">
-                        BLOGS
-                    </a>
-                </li>
+                 
 
                 <li class="list-links-main__item-links-main">
                     <a class="item-links-main__link link" href="./contact.html">
@@ -846,20 +836,14 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./about.html">
+                        <a class="link  link--without-padding" href="./about.html">
                             ABOUT
                         </a>
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./shop.html">
+                        <a class="link  link--without-padding link--selected link--not-active" href="./shop.html">
                             SHOP
-                        </a>
-                    </li>
-
-                    <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./blogs.html">
-                            BLOGS
                         </a>
                     </li>
 
@@ -896,7 +880,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link link--without-padding" href="">
+                         <a class="link link--without-padding" href="./contact.html">
                             CONTACT US
                         </a>
                     </li>
