--- a/project/about.html
+++ b/project/about.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -48,14 +55,8 @@
                         </li>
 
                         <li class="list-links-main__item-links-extra ">
-                            <a class="item-links-extra__link link link--selected" href="./about.html">
+                            <a class="item-links-extra__link link link--selected link--not-active" href="./about.html">
                                 ABOUT
-                            </a>
-                        </li>
-
-                        <li class="list-links-extra__item-links-extra ">
-                            <a class="item-links-extra__link link" href="./blogs.html">
-                                BLOGS
                             </a>
                         </li>
 
@@ -68,16 +69,12 @@
                 </li>
 
                 <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link link--selected" href="./about.html">
+                    <a class="item-links-main__link link link--selected link--not-active" href="./about.html">
                         ABOUT
                     </a>
                 </li>
 
-                <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link" href="./blogs.html">
-                        BLOGS
-                    </a>
-                </li>
+                 
 
                 <li class="list-links-main__item-links-main">
                     <a class="item-links-main__link link" href="./contact.html">
@@ -318,7 +315,7 @@
                 <a class="link link--without-padding" href="./index.html">Home</a> >
 
                 <a class="link link--selected link--underline-border link--underline-border-secondary-color link--without-padding"
-                    href="./obout.html">
+                    href="./about.html">
                     About us
                 </a>
             </p>
@@ -634,7 +631,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./obout.html">
+                        <a class="link  link--without-padding link--selected link--not-active" href="./about.html">
                             ABOUT
                         </a>
                     </li>
@@ -642,12 +639,6 @@
                     <li class="section-footer-main-content__item">
                         <a class="link  link--without-padding" href="./shop.html">
                             SHOP
-                        </a>
-                    </li>
-
-                    <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./blogs.html">
-                            BLOGS
                         </a>
                     </li>
 
@@ -684,7 +675,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link link--without-padding" href="">
+                         <a class="link link--without-padding" href="./contact.html">
                             CONTACT US
                         </a>
                     </li>
