--- a/project/checkout.html
+++ b/project/checkout.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header class="header">
@@ -46,14 +53,8 @@
                         </li>
 
                         <li class="list-links-main__item-links-extra ">
-                            <a class="item-links-extra__link link link--selected" href="./about.html">
+                            <a class="item-links-extra__link link" href="./about.html">
                                 ABOUT
-                            </a>
-                        </li>
-
-                        <li class="list-links-extra__item-links-extra ">
-                            <a class="item-links-extra__link link" href="./blogs.html">
-                                BLOGS
                             </a>
                         </li>
 
@@ -66,16 +67,12 @@
                 </li>
 
                 <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link link--selected" href="./about.html">
+                    <a class="item-links-main__link link" href="./about.html">
                         ABOUT
                     </a>
                 </li>
 
-                <li class="list-links-main__item-links-main">
-                    <a class="item-links-main__link link" href="./blogs.html">
-                        BLOGS
-                    </a>
-                </li>
+                 
 
                 <li class="list-links-main__item-links-main">
                     <a class="item-links-main__link link" href="./contact.html">
@@ -658,7 +655,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding link--selected" href="./about.html">
+                        <a class="link  link--without-padding" href="./about.html">
                             ABOUT
                         </a>
                     </li>
@@ -666,12 +663,6 @@
                     <li class="section-footer-main-content__item">
                         <a class="link  link--without-padding" href="./shop.html">
                             SHOP
-                        </a>
-                    </li>
-
-                    <li class="section-footer-main-content__item">
-                        <a class="link  link--without-padding" href="./blogs.html">
-                            BLOGS
                         </a>
                     </li>
 
@@ -708,7 +699,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link link--without-padding" href="">
+                         <a class="link link--without-padding" href="./contact.html">
                             CONTACT US
                         </a>
                     </li>
