--- a/project/html-block/footer.html
+++ b/project/html-block/footer.html
@@ -118,7 +118,7 @@
                     </li>
 
                     <li class="section-footer-main-content__item">
-                        <a class="link link--without-padding" href="">
+                         <a class="link link--without-padding" href="./contact.html">
                             CONTACT US
                         </a>
                     </li>
